src/parser/CmmParser.java
// Generated from C:/Users/UO258220/IdeaProjects/DLP_cmm/src/parser\Cmm.g4 by ANTLR 4.10.1
package parser;

    import ast.*;
    import ast.expression.*;
    import ast.statements.*;
    import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, ID=36, INT_CONSTANT=37, CHAR_CONSTANT=38, 
		REAL_CONSTANT=39, COMMENT=40, EOL=41, WS=42;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_var_definition = 2, RULE_func_definition = 3, 
		RULE_main_definition = 4, RULE_param_definitions = 5, RULE_func_body = 6, 
		RULE_type = 7, RULE_return_type = 8, RULE_built_in_type = 9, RULE_record_fields = 10, 
		RULE_statement = 11, RULE_cond_body = 12, RULE_expression = 13, RULE_arguments = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "var_definition", "func_definition", "main_definition", 
			"param_definitions", "func_body", "type", "return_type", "built_in_type", 
			"record_fields", "statement", "cond_body", "expression", "arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "';'", "'('", "')'", "'{'", "'}'", "'void'", "'main'", "'['", 
			"']'", "'struct'", "'double'", "'int'", "'char'", "'write'", "'read'", 
			"'='", "'while'", "'if'", "'else'", "'return'", "'.'", "'-'", "'!'", 
			"'*'", "'/'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", 
			"'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID", "INT_CONSTANT", "CHAR_CONSTANT", "REAL_CONSTANT", "COMMENT", "EOL", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionContext d1;
		public Main_definitionContext m1;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public Main_definitionContext main_definition() {
			return getRuleContext(Main_definitionContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			 List<Definition> defs = new ArrayList<Definition>(); 
			setState(36);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(31);
					((ProgramContext)_localctx).d1 = definition();
					 ((ProgramContext)_localctx).d1.ast.forEach(d -> defs.add(d)); 
					}
					} 
				}
				setState(38);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(39);
			((ProgramContext)_localctx).m1 = main_definition();
			 defs.add(((ProgramContext)_localctx).m1.ast); 
			setState(41);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(1, 1, defs); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Var_definitionContext v1;
		public Func_definitionContext f1;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Func_definitionContext func_definition() {
			return getRuleContext(Func_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				((DefinitionContext)_localctx).v1 = var_definition();
				 ((DefinitionContext)_localctx).v1.ast.forEach(v -> _localctx.ast.add(v)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				((DefinitionContext)_localctx).f1 = func_definition();
				 _localctx.ast.add(((DefinitionContext)_localctx).f1.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_definitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public TypeContext t1;
		public Token i1;
		public Token i2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((Var_definitionContext)_localctx).t1 = type(0);
			setState(53);
			((Var_definitionContext)_localctx).i1 = match(ID);
			 _localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).i1.getLine(), ((Var_definitionContext)_localctx).i1.getCharPositionInLine() + 1,
			                        (((Var_definitionContext)_localctx).i1!=null?((Var_definitionContext)_localctx).i1.getText():null), ((Var_definitionContext)_localctx).t1.ast)); 
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(55);
				match(T__0);
				setState(56);
				((Var_definitionContext)_localctx).i2 = match(ID);
				 _localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).i2.getLine(), ((Var_definitionContext)_localctx).i2.getCharPositionInLine() + 1,
				                                (((Var_definitionContext)_localctx).i2!=null?((Var_definitionContext)_localctx).i2.getText():null), ((Var_definitionContext)_localctx).t1.ast)); 
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Return_typeContext r1;
		public Token i1;
		public Param_definitionsContext p1;
		public Func_bodyContext b1;
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public Param_definitionsContext param_definitions() {
			return getRuleContext(Param_definitionsContext.class,0);
		}
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			((Func_definitionContext)_localctx).r1 = return_type();
			setState(66);
			((Func_definitionContext)_localctx).i1 = match(ID);
			setState(67);
			match(T__2);
			setState(68);
			((Func_definitionContext)_localctx).p1 = param_definitions();
			setState(69);
			match(T__3);
			setState(70);
			match(T__4);
			setState(71);
			((Func_definitionContext)_localctx).b1 = func_body();
			setState(72);
			match(T__5);
			 ((Func_definitionContext)_localctx).ast =  new FuncDefinition(
			                            ((Func_definitionContext)_localctx).i1.getLine(),
			                            ((Func_definitionContext)_localctx).i1.getCharPositionInLine() + 1,
			                            (((Func_definitionContext)_localctx).i1!=null?((Func_definitionContext)_localctx).i1.getText():null),
			                            new FunctionType(
			                                ((Func_definitionContext)_localctx).r1.ast.getLine(),
			                                ((Func_definitionContext)_localctx).r1.ast.getColumn(),
			                                ((Func_definitionContext)_localctx).r1.ast,
			                                ((Func_definitionContext)_localctx).p1.ast
			                            ),
			                            ((Func_definitionContext)_localctx).b1.ast
			                        ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token v;
		public Token m;
		public Func_bodyContext b1;
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public Main_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_definition; }
	}

	public final Main_definitionContext main_definition() throws RecognitionException {
		Main_definitionContext _localctx = new Main_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((Main_definitionContext)_localctx).v = match(T__6);
			setState(76);
			((Main_definitionContext)_localctx).m = match(T__7);
			setState(77);
			match(T__2);
			setState(78);
			match(T__3);
			setState(79);
			match(T__4);
			setState(80);
			((Main_definitionContext)_localctx).b1 = func_body();
			setState(81);
			match(T__5);
			 ((Main_definitionContext)_localctx).ast =  new FuncDefinition(
			                            ((Main_definitionContext)_localctx).v.getLine(),
			                            ((Main_definitionContext)_localctx).v.getCharPositionInLine() + 1,
			                            (((Main_definitionContext)_localctx).m!=null?((Main_definitionContext)_localctx).m.getText():null),
			                            new FunctionType(
			                                ((Main_definitionContext)_localctx).v.getLine(),
			                                ((Main_definitionContext)_localctx).v.getCharPositionInLine() + 1,
			                                new VoidType(((Main_definitionContext)_localctx).v.getLine(), ((Main_definitionContext)_localctx).v.getCharPositionInLine() + 1),
			                                new ArrayList<VarDefinition>()
			                            ),
			                            ((Main_definitionContext)_localctx).b1.ast
			                        ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_definitionsContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public Built_in_typeContext t1;
		public Token i1;
		public Built_in_typeContext t2;
		public Token i2;
		public List<Built_in_typeContext> built_in_type() {
			return getRuleContexts(Built_in_typeContext.class);
		}
		public Built_in_typeContext built_in_type(int i) {
			return getRuleContext(Built_in_typeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Param_definitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_definitions; }
	}

	public final Param_definitionsContext param_definitions() throws RecognitionException {
		Param_definitionsContext _localctx = new Param_definitionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param_definitions);
		int _la;
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				((Param_definitionsContext)_localctx).t1 = built_in_type();
				setState(85);
				((Param_definitionsContext)_localctx).i1 = match(ID);
				 _localctx.ast.add(new VarDefinition(((Param_definitionsContext)_localctx).t1.ast.getLine(), ((Param_definitionsContext)_localctx).t1.ast.getColumn(), (((Param_definitionsContext)_localctx).i1!=null?((Param_definitionsContext)_localctx).i1.getText():null), ((Param_definitionsContext)_localctx).t1.ast)); 
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(87);
					match(T__0);
					setState(88);
					((Param_definitionsContext)_localctx).t2 = built_in_type();
					setState(89);
					((Param_definitionsContext)_localctx).i2 = match(ID);
					 _localctx.ast.add(new VarDefinition(((Param_definitionsContext)_localctx).t2.ast.getLine(), ((Param_definitionsContext)_localctx).t2.ast.getColumn(), (((Param_definitionsContext)_localctx).i2!=null?((Param_definitionsContext)_localctx).i2.getText():null), ((Param_definitionsContext)_localctx).t2.ast)); 
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_bodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public Var_definitionContext v1;
		public StatementContext s1;
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13))) != 0)) {
				{
				{
				setState(100);
				((Func_bodyContext)_localctx).v1 = var_definition();
				 ((Func_bodyContext)_localctx).v1.ast.forEach(v -> _localctx.ast.add((VarDefinition)v)); 
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__20) | (1L << T__22) | (1L << T__23) | (1L << ID) | (1L << INT_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << REAL_CONSTANT))) != 0)) {
				{
				{
				setState(108);
				((Func_bodyContext)_localctx).s1 = statement();
				 ((Func_bodyContext)_localctx).s1.ast.forEach(s -> _localctx.ast.add(s)); 
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext t1;
		public Token s;
		public Record_fieldsContext r1;
		public Built_in_typeContext b1;
		public Token i1;
		public List<Record_fieldsContext> record_fields() {
			return getRuleContexts(Record_fieldsContext.class);
		}
		public Record_fieldsContext record_fields(int i) {
			return getRuleContext(Record_fieldsContext.class,i);
		}
		public Built_in_typeContext built_in_type() {
			return getRuleContext(Built_in_typeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}
